Update helper with improvements for AoC 2021